[package]
name = "lovm2"
version = "0.4.8"
authors = ["lausek <root@lausek.eu>"]
edition = "2018"

homepage = "https://github.com/lausek/lovm2"
repository = "https://github.com/lausek/lovm2"
readme = "README.md"
keywords = ["interpreter"]
license-file = "LICENSE"
description = "a lightweight virtual machine with a focus on simplicity and extendability."

[[bin]]
name = "lovm2-repl"
path = "bin/bin.rs"
# required for criterion to work
bench = false

[lib]
name = "lovm2"
path = "src/lib.rs"
# required for criterion to work
bench = false

[dependencies]
lovm2_error = { path = "./src/lovm2_error", version = "0.1.2" }
lovm2_internals = { path = "./src/lovm2_internals", version = "0.2.1" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
libloading = "0.6.6"
dirs = "3.0.1"
indexmap = { version = "1.6.1", features = ["serde"] }

[dev-dependencies]
test-utils = { path = "./tests/test-utils" }

[features]
default = ["stdlib"]
stdlib = []
