[package]
name = "lovm2"
version = "0.5.0"
authors = ["lausek <root@lausek.eu>"]
edition = "2018"

homepage = "https://github.com/lausek/lovm2"
repository = "https://github.com/lausek/lovm2"
readme = "README.md"
keywords = ["interpreter"]
license-file = "LICENSE"
description = "a lightweight virtual machine with a focus on simplicity and extendability."

[workspace]
members = [
    "src/lovm2_bench",
    "src/lovm2_core",
    "src/lovm2_extend",
    "src/lovm2_python",
    "src/lovm2_std",
]
exclude = [
    "examples/*",
]

[[bin]]
name = "lovm2-repl"
path = "bin/bin.rs"
# required for criterion to work
bench = false

[lib]
name = "lovm2"
path = "src/lib.rs"
# required for criterion to work
bench = false

[dependencies]
lovm2_core = { path = "./src/lovm2_core", version = "0.5.0" }
lovm2_std = { path = "./src/lovm2_std", version = "0.5.0", optional = true, default-features = false }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
libloading = "0.6.6"
dirs = "3.0.1"
indexmap = { version = "1.6.1", features = ["serde"] }

[dev-dependencies]
lovm2_test_utils = { path = "./src/lovm2_test_utils" }

[features]
default = ["stdlib", "stdlib-net", "stdlib-ssl"]
stdlib = ["lovm2_std"]
stdlib-net = ["lovm2_std", "lovm2_std/net"]
stdlib-ssl = ["lovm2_std", "lovm2_std/net", "lovm2_std/ssl"]
