[package]
name = "lovm2"
version = "0.5.0"
authors = ["lausek <root@lausek.eu>"]
edition = "2018"

homepage = "https://github.com/lausek/lovm2"
repository = "https://github.com/lausek/lovm2"
readme = "README.md"
keywords = ["interpreter"]
license-file = "LICENSE"
description = "a lightweight virtual machine with a focus on simplicity and extendability."

[workspace]
members = [
    "crates/lovm2_core",
    "crates/lovm2_extend",
    "crates/lovm2_sexp",
    "crates/lovm2_std",
]
exclude = [
    "examples/*",
]

[lib]
name = "lovm2"
path = "crates/lib.rs"
# required for criterion to work
bench = false

[dependencies]
lovm2_core = { path = "./crates/lovm2_core", version = "0.5.0" }
lovm2_std = { path = "./crates/lovm2_std", version = "0.5.0", optional = true, default-features = false }
lovm2_test_utils = { path = "./crates/lovm2_test_utils" }

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
libloading = "0.6.6"
dirs = "3.0.1"
indexmap = { version = "1.6.1", features = ["serde"] }

[features]
default = ["stdlib", "stdlib-net", "stdlib-ssl"]
stdlib = ["lovm2_std"]
stdlib-net = ["lovm2_std", "lovm2_std/net"]
stdlib-ssl = ["lovm2_std", "lovm2_std/net", "lovm2_std/ssl"]
