[package]
name = "lovm2_extend"
version = "0.1.0"
authors = ["lausek <root@lausek.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lovm2_extend"

[dependencies]
lovm2 = { git = "https://github.com/lausek/lovm2" }
