[package]
name = "lovm2_std"
version = "0.1.0"
authors = ["lausek <root@lausek.eu>"]
edition = "2018"

[lib]
name = "lovm2_std"
path = "src/lib.rs"

[dependencies]
lovm2_std_buffer = { path = "./lovm2_std_buffer" }
lovm2_std_collection = { path = "./lovm2_std_collection" }
lovm2_std_data = { path = "./lovm2_std_data" }
lovm2_std_json = { path = "./lovm2_std_json" }
lovm2_std_fs = { path = "./lovm2_std_fs" }
lovm2_std_functional = { path = "./lovm2_std_functional" }
lovm2_std_math = { path = "./lovm2_std_math" }
lovm2_std_net = { path = "./lovm2_std_net" }
lovm2_std_regex = { path = "./lovm2_std_regex" }
lovm2_std_string = { path = "./lovm2_std_string" }

#[workspace]
#members = [
#    "lovm2_std_buffer",
#    "lovm2_std_collection",
#    "lovm2_std_data",
#    "lovm2_std_fs",
#    "lovm2_std_functional",
#    "lovm2_std_json",
#    "lovm2_std_fs",
#    "lovm2_std_math",
#    "lovm2_std_net",
#    "lovm2_std_regex",
#    "lovm2_std_string",
#]
