[package]
name = "pylovm2"
version = "0.4.6"
authors = ["lausek <root@lausek.eu>"]
edition = "2018"

homepage = "https://github.com/lausek/lovm2"
repository = "https://github.com/lausek/lovm2"
readme = "README.md"
keywords = ["interpreter"]
license-file = "LICENSE"
description = "bindings for lausek's own virtual machine."

[lib]
name = "pylovm2"
crate-type = ["cdylib"]

[dependencies]
shrinkwraprs = "0.3.0"
#lovm2 = { version = "0.4.5" }
#lovm2 = { git = "https://github.com/lausek/lovm2" }
lovm2 = { path = "../" }

[dependencies.pyo3]
version = "0.12.3"
features = ["extension-module"]
