[package]
name = "pylovm2"
version = "0.4.8"
authors = ["lausek <root@lausek.eu>"]
edition = "2018"

homepage = "https://github.com/lausek/lovm2"
repository = "https://github.com/lausek/lovm2"
readme = "README.md"
keywords = ["interpreter"]
license-file = "LICENSE"
description = "bindings for lausek's own virtual machine."

[lib]
name = "pylovm2"
crate-type = ["cdylib"]

[dependencies]
shrinkwraprs = "0.3.0"

[dependencies.lovm2]
#version = "0.4.8"
#path = "../"
git = "https://github.com/lausek/lovm2"
branch = "v0.4.8"
default-features = false

[dependencies.pyo3]
version = "0.12.4"
features = ["extension-module"]

[features]
default = ["stdlib", "lovm2/stdlib-net", "lovm2/stdlib-ssl"]
stdlib = ["lovm2/stdlib"]
