[package]
name = "lovm2_python"
version = "0.5.0"
authors = ["lausek <root@lausek.eu>"]
edition = "2018"

homepage = "https://github.com/lausek/lovm2"
repository = "https://github.com/lausek/lovm2"
readme = "README.md"
keywords = ["interpreter"]
license-file = "LICENSE"
description = "bindings for lausek's own virtual machine."

[workspace]

[lib]
name = "pylovm2"
crate-type = ["cdylib", "rlib"]

[dependencies]
shrinkwraprs = "0.3.0"

[dependencies.lovm2]
path = "../.."
default-features = false

[dependencies.pyo3]
version = "0.12.4"
features = ["extension-module"]

[features]
default = ["lovm2/stdlib", "lovm2/stdlib-net", "lovm2/stdlib-ssl"]
