[package]
name = "lovm2_std"
version = "0.5.0"
authors = ["lausek <root@lausek.eu>"]
edition = "2021"

homepage = "https://github.com/lausek/lovm2"
repository = "https://github.com/lausek/lovm2"
readme = "README.md"
keywords = ["interpreter"]
license-file = "LICENSE"
description = "a lightweight virtual machine with a focus on simplicity and extendability."

[lib]
name = "lovm2_std"
path = "src/lib.rs"

[dependencies]
lovm2_core = { path = "../lovm2_core" }
lovm2_extend = { path = "../lovm2_extend" }

json = "0.12.4"
regex = "1.4.2"
# net dependencies
curl = { version = "0.4.44", optional = true, default-features = false }
tiny_http = { version = "0.12.0", optional = true, default-features = false }

[dev-dependencies]
lovm2_test_utils = { path = "../lovm2_test_utils" }
httptest = "0.15.4"
tempfile = "3.1.0"

[features]
default = ["net", "ssl"]

net = ["curl", "tiny_http"]
# allow disabling of ssl separately
ssl = ["curl", "curl/ssl", "tiny_http/ssl"]
