[package]
name = "lovm2_module"
version = "0.1.0"
authors = ["lausek <root@lausek.eu>"]
edition = "2018"

[lib]
name = "lovm2_module"
proc-macro = true

[dependencies]
lovm2 = { path = "../../" }
lovm2_error = { path = "../../src/lovm2_error" }
quote = "1.0.7"

[dependencies.syn]
version = "1.0.48"
features = ["full", "printing"]
