[package]
name = "lovm2_std_buffer"
version = "0.1.0"
authors = ["lausek <root@lausek.eu>"]
edition = "2018"

[lib]
name = "lovm2_std_buffer"
crate-type = ["cdylib", "rlib"]

[dependencies]
lovm2 = { path = "../../", default-features = false }
lovm2_extend = { path = "../../lovm2_extend" }
lovm2_std_data = { path = "../lovm2_std_data" }
