[package]
name = "lovm2_std_data"
version = "0.1.0"
authors = ["lausek <root@lausek.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lovm2_std_data"
crate-type = ["cdylib", "rlib"]

[dependencies]
lovm2 = { path = "../../" }
lovm2_extend = { path = "../../lovm2_extend" }
regex = "1.4.2"
