[package]
name = "lovm2_bench"
version = "0.1.0"
authors = ["lausek <root@lausek.eu>"]
edition = "2018"

[[bench]]
name = "lovm2_bench"
path = "src/bin.rs"
harness = false

[dev-dependencies]
criterion = "0.3.3"
lol = { git = "https://github.com/lausek/lol", branch = "v0.5.0" }
#lovm2 = { path = "./lovm2" }
lovm2 = { path = "../../" }
