[package]
name = "lovm2_core"
version = "0.1.0"
authors = ["lausek <root@lausek.eu>"]
edition = "2018"

[lib]
name = "lovm2_core"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lovm2_error = { path = "../lovm2_error", version = "0.1.2" }
#lovm2_std = { path = "./lovm2_std", optional = true }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
libloading = "0.6.6"
dirs = "3.0.1"
indexmap = { version = "1.6.1", features = ["serde"] }
