[package]
name = "lovm2_core"
version = "0.4.9"
authors = ["lausek <root@lausek.eu>"]
edition = "2018"

homepage = "https://github.com/lausek/lovm2"
repository = "https://github.com/lausek/lovm2"
readme = "README.md"
keywords = ["interpreter"]
license-file = "LICENSE"
description = "a lightweight virtual machine with a focus on simplicity and extendability."

[lib]
name = "lovm2_core"
path = "src/lib.rs"

[dependencies]
lovm2_module = { path = "./src/extend/lovm2_module", version = "0.1.0" }

backtrace = { version = "0.3.53" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
libloading = "0.6.6"
dirs = "3.0.1"
indexmap = { version = "1.6.1", features = ["serde"] }
