[package]
name = "lovm2_error"
version = "0.1.2"
authors = ["lausek <root@lausek.eu>"]
edition = "2018"

homepage = "https://github.com/lausek/lovm2"
repository = "https://github.com/lausek/lovm2"
readme = "README.md"
keywords = ["interpreter"]
license-file = "LICENSE"
description = "a lightweight virtual machine with a focus on simplicity and extendability."

[lib]
name = "lovm2_error"

[dependencies]
backtrace = { version = "0.3.53" }
