[package]
name = "lovm2_internals"
version = "0.2.0"
authors = ["lausek <root@lausek.eu>"]
edition = "2018"

homepage = "https://github.com/lausek/lovm2"
repository = "https://github.com/lausek/lovm2"
readme = "README.md"
keywords = ["interpreter"]
license-file = "LICENSE"
description = "a lightweight virtual machine with a focus on simplicity and extendability."

[lib]
name = "lovm2_internals"
proc-macro = true

[dependencies]
quote = "1.0"

[dependencies.syn]
version = "1.0.33"
features = ["full"]
