[package]
name = "lovm2_std"
version = "0.4.8"
authors = ["lausek <root@lausek.eu>"]
edition = "2018"

homepage = "https://github.com/lausek/lovm2"
repository = "https://github.com/lausek/lovm2"
readme = "README.md"
keywords = ["interpreter"]
license-file = "LICENSE"
description = "a lightweight virtual machine with a focus on simplicity and extendability."

[lib]
name = "lovm2_std"
path = "src/lib.rs"

[dependencies]
json = "0.12.4"
lovm2_core = { path = "../lovm2_core", version = "0.4.8" }
regex = "1.4.2"
# net dependencies
curl = { version = "0.4.34", optional = true, default-features = false }
tiny_http = { version = "0.7.0", optional = true, default-features = false }

[dev-dependencies]
test-utils = { path = "./tests/test-utils" }
httptest = "0.14.0"
tempfile = "3.1.0"

[features]
default = ["net", "ssl"]

net = ["curl", "tiny_http"]
# allow disabling of ssl separately
ssl = ["curl", "curl/ssl", "tiny_http/ssl"]
