[package]
name = "lovm2_module"
version = "0.1.0"
authors = ["lausek <root@lausek.eu>"]
edition = "2018"

homepage = "https://github.com/lausek/lovm2"
repository = "https://github.com/lausek/lovm2"
readme = "README.md"
keywords = ["interpreter"]
license-file = "LICENSE"
description = "a lightweight virtual machine with a focus on simplicity and extendability."

[lib]
name = "lovm2_module"
proc-macro = true

[dependencies]
lazy_static = "1.4.0"
proc-macro2 = "1.0.24"
quote = "1.0.7"

[dependencies.syn]
version = "1.0.48"
features = ["full", "printing", "extra-traits"]
